[package]
name = "fuiz"
version = "0.1.0"
edition = "2021"

[features]
https = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuiz = { git = "https://gitlab.com/opencode-mit/fuiz/game.git" }
actix-cors = "0.7"
actix-web = "4"
actix-ws = "0.3"
dashmap = "6"
derive-where = "1"
enum-map = { version = "2", features = ["serde"] }
fastrand = "2"
futures-util = "0.3"
itertools = "0.12"
kinded = "0.3"
log = "0.4"
pretty_env_logger = "0.5"
rustrict = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3", features = ["chrono"] }
thiserror = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
garde-actix-web = "0.9"
garde = "0.20"
parking_lot = "0.12"
unbox-box = "0.1.0"
num-integer = "0.1"
bytes = "1.5"
jiden = "0.1.1"
web-time = { version = "1.1.0", features = ["serde"] }
